samples/_failures_safe/1761643970_13000e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f1f14a56.c: In function ‘main’:
./samples/SAFE/__tmp_f1f14a56.c:174:12: error: missing terminating " character
  174 |     printf("Enter
      |            ^~~~~~
./samples/SAFE/__tmp_f1f14a56.c:174:5: error: expected expression at end of input
  174 |     printf("Enter
      |     ^~~~~~
./samples/SAFE/__tmp_f1f14a56.c:174:5: error: expected declaration or statement at end of input
